feat: create explore route

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,17 @@ input:focus,
 input:hover {
   box-shadow: none !important;
 }
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c2c9d2;
+  border-radius: 10px;
+}
